--- a/app/views/inscriptions/_list.html.erb
+++ b/app/views/inscriptions/_list.html.erb
@@ -15,6 +15,8 @@
     <span class="material-symbols-outlined">
       euro
     </span>
-    <%= @formation.prix %>€
+      <p id="formation_price">
+        <%= @formation.prix %>€
+      </p>
   </li>
 </ul>
