--- a/app/views/formations/show.html.erb
+++ b/app/views/formations/show.html.erb
@@ -85,25 +85,31 @@
                 <script src="https://www.paypal.com/sdk/js?client-id=AdurcPY4JqwnFY6qKcEtIvYITb5_22nOO8i9FH5WWggKmCB1VLxf9R_UQHzNAE6O9taDhI0bHLP3FvLo"></script>
                 <script>
                   paypal.Buttons({
-                    env: 'sandbox', // Valid values are sandbox and live.
-                    createOrder: async () => {
-                      const response = await fetch('/create_order', {method: 'POST'});
-                      const responseData = await response.json();
-                      return responseData.token;
-                    },
-                    onApprove: async (data) => {
-                      const response = await fetch('/capture_order', {
-                        method: 'POST',
-                        headers: {
-                          'Content-Type': 'application/json'
-                        },
-                        body: JSON.stringify({order_id: data.orderID})
+                    // Sets up the transaction when a payment button is clicked
+                    createOrder: (data, actions) => {
+                      price = document.querySelectorAll(".c-c_card-show")
+                      price = price[price.length - 1].innerText.replace('euro', "").replace('€',"").replace(/\n/, "")
+                      console.log(price)
+                      return actions.order.create({
+                        purchase_units: [{
+                          amount: {
+                            value: price  // Can also reference a variable or function
+                          }
+                        }]
                       });
-                      const responseData = await response.json();
-                      if (responseData.status === 'COMPLETED') {
-                        alert('COMPLETED');
-                        // REDIRECT TO SUCCESS PAGE
-                      }
+                    },
+                    // Finalize the transaction after payer approval
+                    onApprove: (data, actions) => {
+                      return actions.order.capture().then(function(orderData) {
+                        // Successful capture! For dev/demo purposes:
+                        console.log('Capture result', orderData, JSON.stringify(orderData, null, 2));
+                        const transaction = orderData.purchase_units[0].payments.captures[0];
+                        alert(`Transaction ${transaction.status}: ${transaction.id}\n\nSee console for all available details`);
+                        // When ready to go live, remove the alert and show a success message within this page. For example:
+                        // const element = document.getElementById('paypal-button-container');
+                        // element.innerHTML = '<h3>Thank you for your payment!</h3>';
+                        // Or go to another URL:  actions.redirect('thank_you.html');
+                      });
                     }
                   }).render('#paypal-button-container');
                 </script>
